--- a/public/sass/project/_p-organization.scss
+++ b/public/sass/project/_p-organization.scss
@@ -81,11 +81,13 @@
     .p-organization{
       &__body{
         background: #E6EAEE;
-        padding: 48px 16px 56px;
         position: relative;
         overflow: auto;
         max-height: 560px;
         max-width: 100%;
+        .c-scroll {
+          padding: 48px 16px 56px;
+        }
       }
     }
     .c-button{
@@ -102,6 +104,7 @@
   }
   // 組織図結果表示
   &Chart{
+    margin-inline: auto;
     // 各階層のトップ
     &__layer{
       display: flex;
