[fix]組織図と従業員の紐付けページ作成 / ユーザーセレクト用css修正

--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -104,8 +104,16 @@
 
   &--white{
     --button-text: var(--main);
-    --button-border: vvar(--white);
+    --button-border: var(--white);
     --button-surface: var(--white);
+  }
+  &--gray{
+    --normal: #B7BCC5;
+
+    --button-text: var(--main);
+    --button-border: var(--normal);
+    --button-surface: var(--normal);
+    --button-surface-hover: #979daa;
   }
 
   &--cancel{
