--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -5,6 +5,9 @@
   background: var(--white);
   display: grid;
   grid-template-rows: 1fr auto;
+  &:has(.p-formBlock__head){
+    grid-template-rows: auto 1fr;
+  }
   &.min{
     .p-formBlock__body{
       padding: var(--spacing-md);
@@ -46,13 +49,39 @@
   &__form{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 20px;  
+    // 余白 
+    &.spance_min{
+     gap: var(--spacing-sm);
+    }
+    // 入力箇所全体が横並び
+    &.list{
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 8px 12px;
+      padding: 0 0 var(--spacing-sm);
+      .label{
+        color: var(--main);
+        font-size: 13px;
+        font-weight: 500;
+        min-width: max-content;
+        margin-block-end: 0;
+      }
+      .p-inputField{
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        input,select,textarea{
+          padding: var(--spacing-3xs) var(--spacing-xs);
+          min-height: 32px;
+        }
+      }
+    }
+    // labelと入力箇所が横並び
     &:has(.row){
       grid-template-columns: 130px 1fr;
       gap: 20px 0;
-    }
-    &.spance_min{
-     gap: var(--spacing-sm);
     }
     &:has(.p-formBlock__action){
       .p-formBlock__action {
@@ -80,6 +109,7 @@
     text-align: right;
     padding-block-start: 20px;
     border-top: 1px solid var(--border-action);
+    width: 100%;
     &.center{
       justify-content: center;
       align-items: center;
@@ -106,6 +136,13 @@
         padding-inline-start: var(--spacing-md);
         padding-inline-end: var(--spacing-2xs);
       }
+      &:not(span){
+        padding-inline-start: var(--spacing-sm);
+      }
+    }
+    &.sticky{
+      @extend .fixed;
+      position: sticky;
     }
   }
   // 詳細情報
@@ -146,4 +183,35 @@
       border-top: 1px solid var(--border-action);
     }
   }
+  // テーブル
+  // &:has(.p-table){
+  //   .p-tableBox{
+  //     &__head{
+  //       min-height: 0;
+  //       padding: var(--spacing-sm) var(--spacing-md);
+  //       .count{
+  //         .number{
+  //           font-size: 18px;
+  //         }
+  //       }
+  //       .title{
+  //         font-size: var(--font-md);
+  //       }
+  //     }
+  //   }
+  //   .p-formBlock{
+  //     &__body {
+  //       padding: var(--spacing-sm) 0 0;
+  //       .c-scroll {
+  //         max-height: 70.7vh;
+  //       }
+  //     }
+  //     &__foot{
+  //       padding: 0;
+  //     }
+  //     &__action{
+  //       padding: var(--spacing-sm) var(--spacing-sm) var(--spacing-md);
+  //     }
+  //   }
+  // }
 }
