--- a/public/sass/project/_p-organization.scss
+++ b/public/sass/project/_p-organization.scss
@@ -85,6 +85,7 @@
         overflow: auto;
         max-height: 560px;
         max-width: 100%;
+        position: relative;
         .c-scroll {
           padding: 48px 16px 56px;
         }
@@ -139,7 +140,7 @@
         > * > .p-organizationChart__item{
           background: #0F203E;
           color: #fff;
-          padding: 4px 16px;
+          // padding: 4px 16px;
           min-height: 48px;
           min-width: 240px;
           .name{
@@ -205,11 +206,24 @@
           background: #fff;
           color: #0F203E;
           border: solid 1px #0F203E;
-          padding: 4px 16px;
+          // padding: 4px 16px;
           min-height: 40px;
           min-width: 200px;
           .name{
             font-size: 16px;
+          }
+          .button{
+            background-color: rgba(15,32,62,.1);
+            svg{
+              fill: var(--main);
+            }
+            &__area{
+              position: absolute;
+              inset: 0;
+              &.hover{
+                background: rgba(0,0,0,.08);
+              }
+            }
           }
         }
       }
@@ -279,7 +293,7 @@
         > * > .p-organizationChart__item{
           background: #0F203E;
           color: #fff;
-          padding: 4px 12px;
+          // padding: 4px 12px;
           min-height: 32px;
           .name{
             font-size: 14px;
@@ -293,8 +307,8 @@
           background: #AFBCD4;
           color: #333F56;
           min-height: 28px;
-          padding: 4px 8px;
-          min-width: 140px;
+          // padding: 4px 8px;
+          // min-width: 140px;
           .name{
             font-size: 12px;
           }
@@ -321,9 +335,102 @@
       align-items: center; justify-content: center;
       background: #eee;
       padding: 1rem;
+      padding: .25rem 2rem !important;
+      position: relative;
       //width: 100%;
       .name{
         font-weight: 600;
+      }
+      .button{
+        display: inline-grid;
+        place-items: center;
+        width: 1rem;
+        height: 1rem;
+        background-color: rgba(255,255,255,.2);
+        position: absolute;
+        top: 4px;
+        right: 4px;
+        cursor: pointer;
+        svg{
+          fill: var(--white);
+        }
+        &__area{
+          position: absolute;
+          inset: 0;
+          &.hover{
+            background: rgba(255,255,255,.16);
+          }
+        }
+      }
+    }
+
+    // 各部署のリスト
+    &__userList{
+      display: none;
+      text-align: left;
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      z-index: 1000;
+      &.is-open{
+        display: block;
+      }
+      .item{
+        width: max-content;
+        min-width: 400px;
+        padding: var(--spacing-md);
+        border-radius: var(--radius-md);
+        background: rgba(255,255,255,.9);
+        backdrop-filter: blur(10px);
+        box-shadow: 0 4px 4px 0 rgba(0,0,0,.25);
+        .close{
+          font-size: 20px;
+          font-weight: 300;
+          line-height: 1;
+          width: 24px;
+          height: 24px;
+          display: inline-grid;
+          place-items: center;
+          position: absolute;
+          top: 0;
+          right: 0;    
+          cursor: pointer; 
+          &:hover{
+            opacity: .5;
+          }    
+        }
+        .count{
+          display: flex;
+          align-items: baseline;
+          gap: 3px;
+          padding-block: 8px;
+          .unit{
+            font-size: var(--font-3xs);
+            font-weight: 600;
+          }
+          .number{
+            font-size: var(--font-md);
+            font-weight: 600;
+            transform: translate(0px, 1px);
+          }
+        }
+        .c-scroll {
+          padding: 0 !important;
+          max-height: 250px;
+        }
+        ul{
+          > li{
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding-block: 8px;
+            border-bottom: solid 1px rgba(101, 147, 163, .2);
+            .position{
+              font-size: 12px;
+              color: var(--gray-600);
+            }
+          }
+        }
       }
     }
   }
