[fix]セルフチェック修正対応（ほぼ完了）

--- a/public/sass/component/_c-button.scss
+++ b/public/sass/component/_c-button.scss
@@ -90,7 +90,7 @@
     --button-surface-hover: var(--hover);
   }
 
-  &--delelte{
+  &--delete{
     --normal: var(--alert);
     --hover: var(--white);
 
