--- a/public/sass/project/_p-page.scss
+++ b/public/sass/project/_p-page.scss
@@ -119,11 +119,14 @@
 }
 
 
-.p-approval{
-  .u-flex{
-    width: 90px;
-    .c-txt__gray-400{
-      flex: 0 0 37px;
-    }
-  }
-}
+// .p-approval{
+//   .u-flex{
+//     width: 100px;
+//     &.u-w140 {
+//       width: 140px;
+//     }
+//     .c-txt__gray-400{
+//       flex: 0 0 37px;
+//     }
+//   }
+// }
