--- a/public/sass/project/_p-modal.scss
+++ b/public/sass/project/_p-modal.scss
@@ -17,7 +17,11 @@
   box-shadow: 0 40px 60px 0 rgba(21,46,85,.3);
   &.remodal-is-opened{
     opacity: 1;
+    *{
+      opacity: 1;
+    }
   }
+  // セルフチェック
   &__selfCheck{
     max-width: 580px;
     border-top: 8px solid var(--main-accent-green);
@@ -25,6 +29,55 @@
     .p-modal{
       &__head {
         border-bottom: none;
+      }
+    }
+  }
+  // コメント
+  &--comment{
+    padding: 0;
+    border-top: none;
+    width: min(100%, 480px);
+    .p-modal{
+      &__head{
+        border-bottom: none;
+        padding: 20px var(--spacing-md);
+      }
+      &__body{
+        background: #F6F8FA;
+        border-top: 1px solid rgba(101,147,163,.2);
+        border-bottom: 1px solid rgba(101,147,163,.2);
+        padding: var(--spacing-sm) var(--spacing-md);
+        flex: auto;
+        &.c-scroll{
+          max-height: 300px;
+        }
+        p{
+          font-size: 13px;
+          line-height: 1.8;
+          white-space: pre-wrap;
+        }
+      }
+      &__foot{
+        display: flex;
+        justify-content: flex-end;
+        padding: var(--spacing-sm) var(--spacing-md) 20px;
+      }
+    }
+    &.form{
+      overflow: hidden;
+      .p-modal{
+        &__body{
+          padding: var(--spacing-md) 0 0;
+          background: var(--white);
+          .p-inputField {
+            padding: 0 var(--spacing-md);
+          }
+          .p-formBlock__action {
+            padding: 20px var(--spacing-md);
+            border-color: #eee;
+          }
+        }
+        
       }
     }
   }
@@ -39,6 +92,17 @@
     inset: 1rem 1rem auto auto;
     &::before{
       display: none;
+    }
+  }
+  &__action{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    gap: var(--spacing-sm);
+    .p-modal__close{
+      position: static;
     }
   }
   &__head {
@@ -71,6 +135,9 @@
         }
       }
       
+    }
+    .p-inputField{
+      padding-inline: 20px;  
     }
     .p-formBlock__action{
       margin-block-start: -1px;
@@ -156,16 +223,18 @@
       }
     }
   }
+  // テーブルあり
   &:has(.p-tableBox){
     border: none;
     padding: 0;
-    max-height:90vh;
+    max-height:100vh;
     width: 100%;
-    max-width:95vw;
+    max-width:1170px;
     .p-table{
       &Box{
         border-radius:0;
         &__head{
+          padding-inline-end: 72px;
           .action{
             padding-inline-end: 2.5rem;
           }
@@ -174,9 +243,32 @@
       &__check{
         max-height:75vh;
         &--month{
-          width: calc(95vw - 540px);
+          width: calc(70vw - 540px);
+        }
+        .sticky_4 {
+          &::before,&::after{
+            display: none;
+          }
+          .cell--number{
+            border-bottom: none;
+          }
         }
       }
+      &__cell{
+        &--input{
+          .cell--item{
+            grid-template-columns: 1.5fr 2fr;
+          }
+          .cell--number{
+            &:last-child{
+              border-right: none;
+            }
+          }
+        }
+      }
+    }
+    .c-button--text{
+      display: none;
     }
   }
 }
