--- a/public/sass/project/_p-organization.scss
+++ b/public/sass/project/_p-organization.scss
@@ -83,7 +83,7 @@
         background: #E6EAEE;
         position: relative;
         overflow: auto;
-        max-height: 560px;
+        // max-height: 560px;
         max-width: 100%;
         position: relative;
         .c-scroll {
@@ -111,11 +111,33 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 16px;
+      gap: 4px;
       &.layer3,
       &.layer4{
         .p-organizationChart__item{
           width: 100%;
+        }
+      }
+      &.layer4,
+      &.layer5,
+      &.layer6{
+        > * > .p-organizationChart__item{
+          .button{
+            background-color: rgba(15,32,62,.12);
+            width: 1.25rem;
+            height: 1.25rem;
+            svg{
+              width: 12px;
+              fill: var(--main);
+            }
+            &__area{
+              position: absolute;
+              inset: 0;
+              &.hover{
+                background: rgba(0,0,0,.08);
+              }
+            }
+          }
         }
       }
       &.layer1{
@@ -213,8 +235,9 @@
             font-size: 16px;
           }
           .button{
-            background-color: rgba(15,32,62,.1);
+            background-color: rgba(15,32,62,.12);
             svg{
+              width: 13px;
               fill: var(--main);
             }
             &__area{
@@ -300,9 +323,20 @@
             font-weight: 500;
             white-space: nowrap;
           }
+          .button{
+            svg{
+              width: 13px;
+            }
+          }
         }
       }
       &.layer4{
+        .p-organizationChart__underLayer{
+          border: none;
+          padding: 0;
+          gap: 2px;
+          padding-inline-start: 20px;
+        }
         > * > .p-organizationChart__item{
           background: #AFBCD4;
           color: #333F56;
@@ -314,7 +348,36 @@
           }
         }
       }
-      
+      &.layer5, &.layer6{
+        .p-organizationChart__underLayer{
+          gap: 2px;
+        }
+        .p-organizationChart__field {
+          position: relative;
+          &::before{
+            content: "";
+            display: block;
+            width: 12px;
+            height: 30px;
+            border-left: 1px solid rgba(0,0,0,.1);
+            border-bottom: 1px solid rgba(0,0,0,.1);
+            position: absolute;
+            top: -15px;
+            left: -1rem;
+          }
+        }
+        &:first-child{
+          .p-organizationChart__field {
+            &::before{
+              height: 12px;
+              top: 6px;
+            }
+          }
+        }
+        > * > .p-organizationChart__item{
+          background: #E2E7F0;
+        }
+      }
     }
     // 各下層のwrap
     &__underLayer{
@@ -335,7 +398,7 @@
       align-items: center; justify-content: center;
       background: #eee;
       padding: 1rem;
-      padding: .25rem 2rem !important;
+      padding: .25rem 2.5rem !important;
       position: relative;
       //width: 100%;
       .name{
@@ -344,8 +407,9 @@
       .button{
         display: inline-grid;
         place-items: center;
-        width: 1rem;
-        height: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 4px;
         background-color: rgba(255,255,255,.2);
         position: absolute;
         top: 4px;
