--- a/public/sass/project/_p-organization.scss
+++ b/public/sass/project/_p-organization.scss
@@ -122,6 +122,12 @@
       &.layer5,
       &.layer6{
         > * > .p-organizationChart__item{
+          min-height: 28px;
+          padding: 4px 32px;
+          .name{
+            color: #333F56;
+            font-size: 12px;
+          }
           .button{
             background-color: rgba(15,32,62,.12);
             width: 1.25rem;
@@ -339,13 +345,8 @@
         }
         > * > .p-organizationChart__item{
           background: #AFBCD4;
-          color: #333F56;
-          min-height: 28px;
           // padding: 4px 8px;
-          // min-width: 140px;
-          .name{
-            font-size: 12px;
-          }
+          min-width: 170px;
         }
       }
       &.layer5, &.layer6{
@@ -358,11 +359,11 @@
             content: "";
             display: block;
             width: 12px;
-            height: 30px;
+            height: 28px;
             border-left: 1px solid rgba(0,0,0,.1);
             border-bottom: 1px solid rgba(0,0,0,.1);
             position: absolute;
-            top: -15px;
+            top: -13px;
             left: -1rem;
           }
         }
@@ -376,6 +377,8 @@
         }
         > * > .p-organizationChart__item{
           background: #E2E7F0;
+          padding-inline-start: 8px;
+          justify-content: flex-start;
         }
       }
     }
@@ -398,7 +401,7 @@
       align-items: center; justify-content: center;
       background: #eee;
       padding: 1rem;
-      padding: .25rem 2.5rem !important;
+      padding: .25rem 2.5rem;
       position: relative;
       //width: 100%;
       .name{
