--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -420,6 +420,9 @@
   &__check{
     max-height: 70vh;
     display: flex;
+    &.noneBtn{
+      max-height: 74vh;
+    }
     .t-wrapper{
       flex:auto;
     }
@@ -432,7 +435,12 @@
       }
     }
     &--month{
-      width: calc(100vw - 812px);
+      &.sticky_4{
+        width: calc(100vw - 833px);
+      }
+      &.sticky_5{
+        width: calc(100vw - 993px);
+      }
       button{
         background-color: transparent;
         color: var(--white);
@@ -478,16 +486,26 @@
           .cell{
             padding: 5px .25rem;
             border: 1px solid #2C436C;
+            border-bottom: 0;
             background-color: var(--main);
             + .cell{
               border-left: none;
             }
+            &:first-child{
+              border-left: 0;
+            }
           }
           .c-border_0{
             border: none;
-            &:after{
+            &::before,&:after{
               content: none;
             }
+          }
+        }
+        [class*="sticky"].c-border_r2{
+          &::after{
+            width: 2px;
+            background-color: #2C436C;
           }
         }
       }
@@ -512,10 +530,16 @@
             }
           }
         }
+        [class*="sticky"].c-border_r2{
+          &::after{
+            width: 2px;
+            background-color: #E0E9ED;
+          }
+        }
       }
-      &__approval{
+      &__resultall{
         .p-table__check--month{
-          width: calc(100vw - 833px);
+          width: calc(100vw - 812px);
         }
       }
     }
