--- a/public/sass/project/_p-table.scss
+++ b/public/sass/project/_p-table.scss
@@ -268,8 +268,10 @@
   }
   &__cell,&__cell--input{
     display: flex;
+    height: 100%;
     >*{
       min-width: 1px;
+      height: auto;
     }
     .c-noData{
       display:flex;
@@ -341,7 +343,6 @@
     }
     [class*="u-w"].c-txt__xs{
       align-content: center;
-      // text-decoration: underline;
       a{
         text-decoration: underline;
       }
@@ -349,14 +350,10 @@
     .cell {
       &--item{
         display: grid;
+        grid-template-rows: auto 1fr;
         .comment {
           grid-column: 1/3;
           overflow: hidden;
-          display: -webkit-box;
-          text-overflow: ellipsis;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 2;
-          max-height: 28px;
           min-height: 28px;
           color: #666;
           font-size: 11px;
@@ -396,6 +393,7 @@
         }
         .full{
           grid-column: 1/3;
+          grid-row: 1/3;
         }
       }
       &--number{
@@ -420,6 +418,7 @@
   &__check{
     max-height: 70vh;
     display: flex;
+
     &.noneBtn{
       max-height: 74vh;
     }
@@ -436,7 +435,7 @@
     }
     &--month{
       &.sticky_4{
-        width: calc(100vw - 833px);
+        width: calc(100vw - 835px);
       }
       &.sticky_5{
         width: calc(100vw - 993px);
@@ -467,10 +466,14 @@
       }
     }
     .t-table{
+      table-layout: fixed;
+      border-spacing: 0;
+      border-collapse: separate;
       width: 100%;
       min-width: 1710px;
+      height: 100%;
       &__narrow{
-        min-width:calc(540px + 50vw);
+        // min-width:calc(540px + 50vw);
       }
       th,td{
         font-size: 13px;
@@ -488,6 +491,7 @@
             border: 1px solid #2C436C;
             border-bottom: 0;
             background-color: var(--main);
+            
             + .cell{
               border-left: none;
             }
@@ -537,9 +541,27 @@
           }
         }
       }
+      // 幅
+      .u-w80{
+        min-width: 80px;
+      }
+      .u-w100{
+        min-width: 100px;
+      }
+      .u-w140{
+        min-width: 140px;
+      }
+
       &__resultall{
-        .p-table__check--month{
-          width: calc(100vw - 812px);
+        .u-w100{
+          min-width: 80px !important;
+          border: none;
+          .cell--number {
+            grid-row: 1/3;
+            &.targeter{
+              display: none;
+            }
+          } 
         }
       }
     }
@@ -571,7 +593,8 @@
       }
       &_2{
         position: sticky;
-        left:100px;
+        // left:100px;
+        left: 180px;
         z-index: 2;
         &:before{
           content: '';
@@ -596,7 +619,8 @@
       }
       &_3{
         position: sticky;
-        left:240px;
+        // left:240px;
+        left: 360px;
         z-index: 2;
         &:before{
           content: '';
