--- a/public/sass/project/_p-formBlock.scss
+++ b/public/sass/project/_p-formBlock.scss
@@ -154,7 +154,7 @@
       display: grid;
       grid-template-columns: subgrid;
       grid-column: span 2;
-      gap: 0 var(--spacing-3xs);
+      gap: 0 var(--spacing-xs);
       &.column{
         grid-template-columns: 1fr;
         gap: 12px 0;
